# riptide_perception

./: .gitignore  .gitmodules  README.md  orientation_example.py  python_orientation.py  yolo_orientation.py
log/: latest_deploy
riptide_mapping/: CMakeLists.txt  package.xml
riptide_mapping/config/: config.yaml  config_overnight.yaml  dependent_frames.yaml  dummy_detections.yaml  dummy_detections_overnight.yaml  oriented_frames.yaml
riptide_mapping/include/: mapping.hpp
riptide_mapping/include/riptide_mapping/: location.hpp  mapping.hpp
riptide_mapping/launch/: dummy_detections.launch.py  mapping.launch.py
riptide_mapping/riptide_mapping2/: dependentFramePublisher.cpp  dummydetections.py  estimate.py  location.py  mapping.py  old_mapping.py  orientedFramePublisher.cpp
riptide_mapping/riptide_mapping2/log/: latest_deploy
riptide_mapping/src/: location.cpp  mapping.cpp  mapping_node.cpp
riptide_mapping2/: CMakeLists.txt  package.xml
riptide_mapping2/config/: dummy_detections.yaml  dummy_detections_overnight.yaml
riptide_mapping2/riptide_mapping2/: dummydetections.py  estimate.py  orientedFramePublisher.cpp
riptide_yolo/: package.xml
riptide_yolo/launch/: vision.launch.py  yolov5s_simple.launch.py
riptide_yolo/riptide_yolo/: vision.py
tempMatch/: CMakeLists.txt  package.xml
tempMatch/src/: template_matching_node.cpp
template_matching/: CMakeLists.txt  package.xml
tensor_detector/: CMakeLists.txt  README.md  package.xml
tensor_detector/config/: tensorrt.yaml  yolo_detection.yaml  yolo_orientation.yaml
tensor_detector/include/: detector.hpp
tensor_detector/include/tensor_detector/: detector.hpp
tensor_detector/include/tensorrt_detector/: yolov5_detection.hpp  yolov5_detector.hpp  yolov5_detector_internal.hpp  yolov5_logging.hpp
tensor_detector/launch/: tensorrt.launch.py
tensor_detector/src/: camera_manager.py  converter.cpp  detector.cpp  dfc_converter.py  notes.txt  picture_taker.py  tensorrtWrapper.cpp  yolo_detection.py  yolo_orientation.py
tensor_detector/src/tensorrt_detector/: yolov5_common.cpp  yolov5_detection.cpp  yolov5_detector.cpp  yolov5_detector_internal.cpp  yolov5_logging.cpp
training/: README.txt  UWRTBase.blend  UWRTBase.blend1  data_generator.py  readme.txt
training/props/blender/: abydos.blend  buoy-01.blend  buoy-02.blend  earth.blend  gate-earth-left.blend  gate-earth-right.blend  gate-unjoined.blend  gate.blend  torpedo02.blend
training/test_run_for_tob/labels/: im4.txt
video_compression/: CMakeLists.txt  package.xml
video_compression/config/: compressor_config.yaml  compressor_config_stack.yaml  compressor_config_talos.yaml
video_compression/include/video_compression/: compression.hpp
video_compression/launch/: compression.launch.py  compression_stack.launch.py  compression_talos.launch.py
video_compression/src/: compressor.cpp  compressor_node.cpp
yolov8_detector/: CMakeLists.txt  package.xml
yolov8_detector/config/: yolov8.yaml
yolov8_detector/launch/: yolov8_detector.launch.py
yolov8_detector/src/: markBeatCole.cpp  markBeatNvidia.cpp
